//
// PROJECT:         Aspia
// FILE:            proto/key_exchange.proto
// LICENSE:         GNU Lesser General Public License 2.1
// PROGRAMMERS:     Dmitry Chapyshev (dmitry@aspia.ru)
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package proto;

message HelloMessage
{
    bytes public_key = 1;
    bytes nonce = 2;
}
